# lunchbox

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BACKEND_API.md  IDEAS.md  PRD.md  PROGRESS.txt  README.md  START_WEB.sh  deploy.sh  index.html  install.sh  ralphy.sh
.github/workflows/: release.yml
backend/: README.md  TESTING.md  run.sh
backend-go/: README.md  go.mod
backend-go/cmd/lunchbox/: main.go
backend-go/cmd/server/: main.go
backend-go/internal/app/: server.go  server_test.go
backend-go/internal/config/: config.go
backend/app/: db.py  main.py
backend/app/api/: main.py
backend/scripts/: integration_test.sh  interactive_test.sh
backend/tests/integration/: test_lunchbox_flow.py
cli/: README.md  pyproject.toml
cli/lunchbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/lunchbox_cli/: __init__.py  main.py
data/: lunchbox.db
data/customer_dbs/: db_0f8c45.db  db_aa66c9.db  db_b6e853.db  db_billing.db
data/revisions/: rev_534288.db  rev_6f47e7.db  rev_940099.db
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/docs/: PLATFORM_BUTTONS.md
frontend/src/: App.css  App.tsx  index.css
frontend/src/__tests__/: drizzle-encrypted-text.test.ts  (+1 more)
lunchbox/: README.md  __init__.py  env_example  install.sh  pyproject.toml  requirements.txt  test_lunchbox.py
scripts/: README.md  setup-https-remote.sh  setup-https.sh
src/: App.tsx
src/pages/: DocsPage.tsx
src/sections/: FAQSection.tsx  FeaturesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx
(+33 files in other folders)
