[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lunchbox"
version = "0.1.0"
description = "Database version control for teams"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests~=2.31.0",
    "python-dotenv~=1.0.0",
    "click~=8.1.0",
    "pytest",
    "pytest-mock",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

# Package is the current directory (lunchbox/); no nested package dir needed
[tool.setuptools.packages.find]
where = [".."]
include = ["lunchbox"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
